# aht21-temp

./: CMakeLists.txt  README.md  good-run.srzip.pvs  good-run.srzip.sr  main.c  output.txt
